Fixed Homepage overflow

--- a/packages/homepage/src/css/global.css
+++ b/packages/homepage/src/css/global.css
@@ -24,7 +24,7 @@ body {
   color: white;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 @import 'https://cdn.jsdelivr.net/npm/@codesandbox/sandpack-react@latest/dist/index.css';
